codex-rs/tui/src/snapshots/codex_tui__app_shell__tests__command_output_deltas_preserve_newline_chunks.snap
---
source: tui/src/app_shell_tests.rs
expression: "render_shell(&shell, Rect::new(0, 0, 100, 20,))"
---
 ◆ BC       gpt-5-codex ▾   default ▾  ● thinking │
──────────────────────────────────────────────────│ Sessions │ Agents │ Workspace │ Settings │ Help
                                                  │━━━━━━━━━━━─────────────────────────────────────
 ◆ CONVERSATION                                   │
   ▌ output first                                 │▎◆ SESSIONS
   ▌        second                                │▎○ CLICK TO FOCUS  ACTIVE  0 sessions
                                                  │▎loading sessions
                                                  │
                                                  │▎◆ TOOLS
                                                  │▎in progress exec just test -p codex-tui
                                                  │▎completed file changes in app_shell
                                                  │
                                                  │▎◆ THREAD
                                                  │▎stage-one
╭────────────────────────────────────────────────╮│▎id 01900000-0000-7000-8000-000000000001
│◆ MESSAGE  ENTER SEND  SHIFT+ENTER NEWLINE  1:37││▎resume, fork, archive, delete in session list
│> Summarize the new shell architecture          ││
│                                                ││▎◆ STATUS
│                                                ││▎thinking
╰────────────────────────────────────────────────╯│
