codex-rs/tui/src/snapshots/codex_tui__app_shell__tests__command_output_deltas_update_one_output_block.snap
---
source: tui/src/app_shell_tests.rs
expression: "render_shell(&shell, area)"
---

 Better Codex                                                        ┌───────┬──────┬──────┬──────┐
                                                                     │  1S   │  2W  │ 3Set │4Help │
                                                                     └───────┴──────┴──────┴──────┘
 Conversation
 ▌ tool exec cargo test                                              Sessions
                                                                     unfocused active 0 shown
   ▌ output pytest 40%                                               loading sessions
   ▌        pytest 80%
   ▌        pytest 100%                                              Tools
                                                                     in progress exec just test ...
                                                                     completed file changes in a...
                                                                     in progress exec cargo test

                                                                     Thread
 Composer ready 1:37                                                 stage-one
 > Summarize the new shell architecture                              id 01900000-0000-7000-8000-...
                                                                     resume, fork, archive, delete
