codex-rs/tui/src/snapshots/codex_tui__app_shell__tests__command_palette_opens_external_agent_import_review.snap
---
source: tui/src/app_shell_tests.rs
expression: "render_shell(&shell, Rect::new(0, 0, 100, 32,))"
---
                                                  │
 ◆ BC      gpt-5-codex ▾   default ▾   default ▾  │ Settings │ Agents │ Workspace │ Sessions │ Help
──────────────────────────────────────────────────│────────────────────────────────━━━━━━━━━━──────
                                                  │
 ◆ CONVERSATION                                   │▎◆ SESSIONS
 ▎ SYSTEM  Better Codex app shell                 │▎○ CLICK TO FOCUS  ACTIVE  0 sessions
 ▎ YOU  Create a divergent standalone TUI.        │▎loading sessions
                                                  │
 ▎ CODEX  Started a fullscreen app shell backed   │▎◆ TOOLS
          by app-server turns.                    │▎in progress exec just test -p codex-tui
 ▎ PLAN  1. Bu╭──────────────────────────────────────────────────────────────────────╮l
         2. Wi│◆ CLAUDE CODE IMPORT                                                  │
         3. Re│Review Claude Code setup  Settings 1, Skills 1                        │
              │                                                                      │
 ▌ tool exec j│> [x] Settings (settings.json -> config.toml) - home                  │00001
              │      Import settings from Claude Code                                │ession list
 ▌ edited 3 fi│  [x] Skills - better-codex                                           │
 ▎ STATUS  che│      1 skill: review                                                 │
 ▎ STATUS  rev│                                                                      │
           imp│↑↓ / j k move  Enter import  Space toggle  Esc cancel                 │
              │                                                                      │
 ▎ CODEX  The ╰──────────────────────────────────────────────────────────────────────╯es.
          surface.                                │▎x Shell frame
                                                  │▎> Transcript model
                                                  │▎- Approvals
                                                  │
╭────────────────────────────────────────────────╮│
│◆ MESSAGE  1:37                                 ││
│> Summarize the new shell architecture          ││
│                                                ││
│                                                ││
╰────────────────────────────────────────────────╯│
