codex-rs/tui/src/snapshots/codex_tui__app_shell__tests__compact_dashboard_shortcut_labels.snap
---
source: tui/src/app_shell_tests.rs
expression: rendered(60)
---
◆ COMPOSER                   │ ◆ DASHBOARD
 ⌘←→⌫        Line boundary   │  ^1/^2       Status/agents
 ⌥/^ + ←→    Move by word    │  ^3/^4       Sessions/help
 S/A+↵       Newline         │  Tab/j/k/↵   Navigate/apply
 Fn nav/⌫    Page/delete     │ ◆ SESSIONS
 ↵           Send            │  ^N/↵        New/focus
 Alt+↑/^O    Select / copy   │  r / f       Resume / fork
 Alt+M/E     Model/effort    │  a / u       Arc/unarc
◆ APP                        │  v / d       View/delete
 ^C/Esc×2/^D  Exit/hide      │  n · /       Name/search
◆ AGENTS                     │
 ↵/j/k       Focus/inspect   │
