codex-rs/tui/src/snapshots/codex_tui__app_shell__tests__compact_settings.snap
---
source: tui/src/app_shell_tests.rs
expression: "render_shell(&shell, Rect::new(0, 0, 78, 24))"
---

 ◆ BETTER CODEX  better-codex           gpt-5-codex ▾   default ▾  ● thinking
──────────────────────────────────────────────────────────────────────────────

     Sessions    │    Agents    │   Workspace    │   Settings    │   Help
 ─────────────────────────────────────────────────━━━━━━━━━━━━━━━━───────────
 ▎◆ SETTINGS
 ▎● FOCUSED  MODEL  3 fields
 ▎▸ Model    Permissions
 ▎  Appearance    Integrations
 ▎› Model: gpt-5-codex
 ▎  Reasoning: default


 ◆ CONVERSATION
                                                                            ┃
 ▎ CODEX  The new shell owns the fullscreen surface.                        ┃

╭────────────────────────────────────────────────────────────────────────────╮
│◆ MESSAGE  ENTER SEND  SHIFT+ENTER NEWLINE  1:37                            │
│> Summarize the new shell architecture                                      │
│                                                                            │
│                                                                            │
╰────────────────────────────────────────────────────────────────────────────╯
